@@ -6,7 +6,7 @@
 	<group>Administrator</group>
 	<join_date>2005.10.08-17:11:43</join_date>
 <<<<<<< .mine
-	<last_login>2007.10.21-02:23:51</last_login>
+	<last_login>2007.10.26-00:53:58</last_login>
 =======
 	<last_login>2007.01.01-23:42:36</last_login>
 >>>>>>> .r109
