@@ -426,7 +426,7 @@ a.index:hover { text-decoration: underline; }
     color:#000000;
 }
 
-/* misc *9
+/* misc */
 .hr_line {
 	height: 1px;
 	background-color: #ccc;
